Adding token validation (#14)
* Working on token validation

* WIP: get token endpoint

* Fixed build
