# backend/src/middlewares/openapi.ts
@@ -2,6 +2,7 @@ import { readFileSync } from "fs";
 import path from "path";
 import yaml from "js-yaml";
 import { middleware as OpenApiValidator } from "express-openapi-validator";
+import { tokenValidator } from "./tokenValidator";
 
 const apiSpecFile = path.join(__dirname, "..", "openapi.yaml");
 
@@ -10,8 +11,13 @@ export const openApiMiddleware = OpenApiValidator({
   validateRequests: true,
   validateResponses: false,
   // operationHandlers points to "src"
-  // "x-eov-operation-handler" will reference "controllers" folder
+  // "x-eov-operation-handler" will have root at "src" folder
   operationHandlers: path.join(__dirname, ".."),
+  validateSecurity: {
+    handlers: {
+      bearerAuth: tokenValidator
+    },
+  },
 });
 
 export const swaggerDocument = yaml.load(readFileSync(apiSpecFile, "utf8"));
